llvm/dev/call0.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/call0.llvm:8:1: error: expected instruction opcode
}
^
